--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
           <div>and I am a passionate</div>
           <span id="element"></span>
           <div class="buttons">
-            <button class="btn">Download Resume</button>
-            <button class="btn">Visit Github</button>
+            <button class="btn" onclick="window.open('https://shorturl.at/dkWZ5','_blank')">Open Resume</button>
+            <button class="btn" onclick="window.open('https://github.com/Pramod025','_blank')">Visit Github</button>
           </div>
         </div>
         <div class="rightSection">
