--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         </ul>
       </nav>
 </header>
-<main>
+<main>a
        <section class="firstSection">
         <div class="leftSection">
           <div>Hi, My name is <span class="purple">Pramod</span></div>
-          <div>and I am a passionate</div>
+          <div>and I am a passionate Backend Developer</div>
           <span id="element"></span>
           <div class="buttons">
           <button
@@ -381,15 +381,9 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; Pramod's Portfolio. All Rights Reserved.</p>
     </footer>
     </main>
-    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-    <script>
-      var typed = new Typed("#element", {
-        strings: ["Web Developer", "Backend Developer"],
-        typeSpeed: 50,
-      });
+
     </script>
   </body>
 </html>
