--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         </ul>
       </nav>
 </header>
-<main>a
+<main>
        <section class="firstSection">
         <div class="leftSection">
           <div>Hi, My name is <span class="purple">Pramod</span></div>
-          <div>and I am a passionate Backend Developer</div>
+          <div>and I am a passionate Backend and Web Developer</div>
           <span id="element"></span>
           <div class="buttons">
           <button
