--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">User Login System</h2>
+            <h2 class="experience-sub-title project-title">News Aggregator Web App</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
